# grid2op-openenv

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Blog.md  Dockerfile  LICENSE  README.md  __init__.py  architecture.md  client.py  evaluation.md  ft_inference.py  graph_build.md  implementation.md  inference.py  inference_speed_test.py  main.py  models.py  openenv.yaml  pyproject.toml  synthticdata_checklist.md
architecture/: architecture.md  task_1_architecture.md  task_2_architecture.md  task_3_architecture.md  task_4_architecture.md
docs/: PROJECT.md  evaluation.md  implementation.md  reward_and_scoring.md  rlvr_environment.md  task_1.md  task_2.md  task_3.md  task_4.md  web-ui.md
grid2op_env/: .gitignore  README.md  client.py  graph_analysis.py  inference.py  models.py
hack/: benchmark.md  environment_design.md  evaluation.md  grpo_exp.md  plots.md  reward_hack.md
scripts/: balance_dataset_actions.py  build_hf_grpo_image.sh  check_dataset_quality.py  check_ft_inference_log.py  collect_rollout_grpo_dataset.py  collect_teacher_dataset.py  diagnose_action_space.py  filter_grpo_dataset.py  render_submission_plots.py  run_hf_collect_rollout_grpo.sh  run_hf_ft_eval.sh  run_hf_grpo_multistage_real.sh  run_hf_grpo_multistage_rollout_real.sh  run_hf_grpo_multistage_smoke.sh  run_hf_grpo_multistage_smoke_image.sh  run_hf_ieee118_collect_teacher.sh  run_hf_ieee118_eval.sh  run_hf_ieee118_grpo.sh  run_hf_ieee118_sft.sh  task_objectives.py  train_grpo_verifier.py  train_sft.py
server/: Dockerfile  app.py  environment.py  graders.py  gradio_ui.py  requirements.txt  (+1 more)
(+30 files in other folders)
